--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -1,5 +1,5 @@
 ---
-title: About Goldydocs
+title: About Perspective API
 linkTitle: About
 menu:
   main:
@@ -8,21 +8,26 @@ menu:
 ---
 
 
-{{< blocks/cover title="About Goldydocs" image_anchor="bottom" height="min" >}}
+{{< blocks/cover title="About Perspective API" image_anchor="bottom" height="min" >}}
 
-<p class="lead mt-5">A sample site using the Docsy Hugo theme.
-</p>
+<p class="lead mt-5">Increase empathy, participation, and quality in online conversation at scale.</p>
 
 {{< /blocks/cover >}}
 
 {{% blocks/lead %}}
-Goldydocs is a sample site using the <a href="https://github.com/google/docsy">Docsy</a> Hugo theme that shows what it can do and provides you with a template site structure. It’s designed for you to clone and edit as much as you like. See the different sections of the documentation and site for more ideas.
+The Perspective API is part of the <a href="https://conversationai.github.io/">Conversation AI</a> research effort that aims to help increase empathy, participation, and quality in online conversation at scale.
 {{% /blocks/lead %}}
 
 
 {{< blocks/section >}}
 <div class="col-12">
-<h1 class="text-center">This is another section</h1>
+<h1 class="text-center">Relevant websites</h1>
+<ul>
+	<li><a href="https://github.com/conversationai/perspectiveapi/blob/master/README.md">Documentation</a></li>
+	<li><a href="https://medium.com/the-false-positive">Blog</a></li>
+	<li><a href="https://support.perspectiveapi.com/s/">Get support</a></li>
+	<li><a href="https://www.perspectiveapi.com/">Marketing website</a></li>
+</ul>
 </div>
 
 {{< /blocks/section >}}
@@ -32,7 +37,7 @@ Goldydocs is a sample site using the <a href="https://github.com/google/docsy">D
 {{< blocks/section >}}
 
 <div class="col-12">
-<h1 class="text-center">This is another section</h1>
+<h1>Other section</h1>
 </div>
 
 {{< /blocks/section >}}
